5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1601_2043.log
== TEST (2019-03-31 18:27:01) 
-- CODE:
marcos = float(input("leia a nota:"))
lucas = float(input("leia a nota:"))
matheus = float(input("leia a nota:"))
gabriel = float(input("leia a nota:"))
x = soma
print(round(x ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:28:05) 
-- CODE:
marcos = float(input("leia a nota:"))
lucas = float(input("leia a nota:"))
matheus = float(input("leia a nota:"))
gabriel = float(input("leia a nota:"))
nota = x
print(round(x ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    nota = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:30:33) 
-- CODE:
marcos = float(input("leia a nota:"))
lucas = float(input("leia a nota:"))
matheus = float(input("leia a nota:"))
gabriel = float(input("leia a nota:"))
print(round(media ponderada ,2))
-- ERROR:
File "XXXX", line 5
    print(round(media ponderada ,2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:37:46) 
-- CODE:
marcos = float(input("leia a nota:"))
lucas = float(input("leia a nota:"))
matheus = float(input("leia a nota:"))
gabriel = float(input("leia a nota:"))
media ponderada = round(notas ,2)
print(media ponderada)
-- ERROR:
File "XXXX", line 5
    media ponderada = round(notas ,2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:23:20) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(inpu("leia a nota:"))
n4 = float(input("leia a nota:"))
media = (p1*n1 + p2*n2 + p3*n3 + p4*n4/p1 + p2 + p3 + p4)
print(round(media ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n3 = float(inpu("leia a nota:"))
NameError: name 'inpu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:24:21) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
media = (p1*n1 + p2*n2 + p3*n3 + p4*n4/p1 + p2 + p3 + p4)
print(round(media ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media = (p1*n1 + p2*n2 + p3*n3 + p4*n4/p1 + p2 + p3 + p4)
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:28:05) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)/p1 + p2 + p3 + p4)
print(round(media ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)/p1 + p2 + p3 + p4)
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:22:17) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)/p1 + p2 + p3 + p4)
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:22:37) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)/p1 + p2 + p3 + p4)
print(round(media ,2))
-- EXECUTION TIME:
0.144204
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:24:03) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)/ p1 + p2 + p3 + p4)
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:24:17) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)/ p1 + p2 + p3 + p4)
print(round(media ,2))
-- EXECUTION TIME:
0.138911
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:26:04) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4) / p1 + p2 + p3 + p4)
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:26:21) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4) / p1 + p2 + p3 + p4)
print(round(media ,2))
-- EXECUTION TIME:
0.151848
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:35:59) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4))/p1 + p2 + p3 + p4
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:36:10) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4))/p1 + p2 + p3 + p4
print(round(media ,2))
-- EXECUTION TIME:
0.208241
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:36:31) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) /p1 + p2 + p3 + p4
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:36:47) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) /p1 + p2 + p3 + p4
print(round(media ,2))
-- EXECUTION TIME:
0.172067
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:37:25) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) / p1 + p2 + p3 + p4
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:37:36) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) / p1 + p2 + p3 + p4
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:37:36) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) / p1 + p2 + p3 + p4
print(round(media ,2))
-- EXECUTION TIME:
0.27887
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:40:13) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) / p1 + p2 + p3 + p4
print(round(media ,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:40:25) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4)) / p1 + p2 + p3 + p4
print(round(media ,2))
-- EXECUTION TIME:
0.251898
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:41:39) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4))/(p1 + p2 + p3 + p4)
print(round(media ,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:41:52) 
-- CODE:
n1 = float(input("leia a nota:"))
n2 = float(input("leia a nota:"))
n3 = float(input("leia a nota:"))
n4 = float(input("leia a nota:"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4
media = ((p1*n1) + (p2*n2) + (p3*n3) + (p4*n4))/(p1 + p2 + p3 + p4)
print(round(media ,2))
-- EXECUTION TIME:
0.211963
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
